fixed text behind trans box

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -106,19 +106,10 @@ main {
     }
 
     .trans-box {
-      background-color: #fff;
-      opacity: .5;
+      background-color: rgba(255, 255, 255, 0.5);
+      padding: 10px;
+      border-radius: 10px;
     }
-
-    .trans-box::before,
-    .trans-box::after {
-      content: '';
-      position: absolute;
-      bottom  : 0;
-      z-index : -1;
-      background-color: #fff;
-      opacity: .5;
-}
 
   .about-info {
     display: grid;
